--- a/wp-content/themes/theme-the-boyzs/partials/_equipe.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_equipe.scss
@@ -26,6 +26,7 @@
             justify-content: center;
             align-items: center;
             margin-top:35px;
+            margin-bottom:10px;
             img{
                 width:40vw;
             }
