finalisation pages a propos

--- a/wp-content/themes/theme-the-boyzs/partials/_contact.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_contact.scss
@@ -1,7 +1,13 @@
 @use "variables";
 
 .titrecontact{
+    font-size: 50px ;
+    margin-top: 200px;
     text-align: center;
+}
+
+.descriptioncontact{
+    margin-bottom: 50px;
 }
 
 .titremontreal{
