ajustement style des nouvelles

--- a/wp-content/themes/theme-the-boyzs/partials/_news.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_news.scss
@@ -39,7 +39,7 @@
                 transition: color 0.3s; // Smooth color transition
 
                 &:hover {
-                    color: variables.$whitetrans; // Change color on hover
+                    color: variables.$ldlRed; // Change color on hover
                 }
             }
         }
