ajout de style à la page headline

--- a/wp-content/themes/theme-the-boyzs/partials/_news.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_news.scss
@@ -40,6 +40,7 @@
 
                 &:hover {
                     color: variables.$ldlRed; // Change color on hover
+                    cursor: pointer;
                 }
             }
         }
