--- a/wp-content/themes/theme-the-boyzs/partials/_headline.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_headline.scss
@@ -8,12 +8,18 @@
     gap: 20px;
     max-width: 800px; // Set a max width for a more newspaper-like column
     margin: 40px auto; // Center the wrapper with space above and below
-    padding: 20px; // Add padding for spacing
+    padding: 2rem 1rem; // Add padding for spacing
      // Light border to simulate newspaper edges
-    background-color: variables.$white; // Slightly off-white background for a classic feel
+    background-color: #f9f9f9; // Slightly off-white background for a classic feel
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // Subtle shadow for depth
     
-
+    .headline-title {
+        font-size: 4.5rem;
+        font-weight: bold;
+        line-height: 1.4;
+        margin-bottom: 20px;
+    }
+    
     h1 {
         grid-column: span 3;
         font-family: 'Georgia', serif; // Classic serif font for headlines
@@ -23,7 +29,36 @@
         line-height: 1.2; // Tight line height for a compact look
         color: #333; // Dark color for readability
     }
+    .news-article{
+        text-align: left;
+        font-size: 1.9rem;
+        margin-bottom: 40px;
 
+        .article-link{
+            color: #007bff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+            &:hover{
+                color: #0056b3;
+            }
+        }
+    }
+    .highlights {
+        background-color: #f9acb8;
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0px 3px 6px rgba(0,0,0,0.1);
+
+        h3 {
+            font-size: 1.6rem;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.1rem;
+            line-height: 1.6;
+        }
+    }
     article { 
         grid-column: 1 / 2;
         font-size: 1.1em; // Slightly larger than normal text size
@@ -36,8 +71,12 @@
         p {
           text-align: left;
         }
+
     }
+    
 }
+
+
 .nextprev-wrapper {
     padding: 10px;
     display: flex;
