--- a/wp-content/themes/theme-the-boyzs/style.css
+++ b/wp-content/themes/theme-the-boyzs/style.css
@@ -1106,6 +1106,7 @@ section {
 }
 .news-wrapper ul.news-wrapper__list li a:hover {
   color: #b20838;
+  cursor: pointer;
 }
 
 .container {
@@ -1298,9 +1299,15 @@ section {
   gap: 20px;
   max-width: 800px;
   margin: 40px auto;
-  padding: 20px;
-  background-color: #fdfdff;
+  padding: 2rem 1rem;
+  background-color: #f9f9f9;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.headline-wrapper .headline-title {
+  font-size: 4.5rem;
+  font-weight: bold;
+  line-height: 1.4;
+  margin-bottom: 20px;
 }
 .headline-wrapper h1 {
   grid-column: span 3;
@@ -1310,6 +1317,33 @@ section {
   margin-bottom: 10px;
   line-height: 1.2;
   color: #333;
+}
+.headline-wrapper .news-article {
+  text-align: left;
+  font-size: 1.9rem;
+  margin-bottom: 40px;
+}
+.headline-wrapper .news-article .article-link {
+  color: #007bff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+.headline-wrapper .news-article .article-link:hover {
+  color: #0056b3;
+}
+.headline-wrapper .highlights {
+  background-color: #f9acb8;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+}
+.headline-wrapper .highlights h3 {
+  font-size: 1.6rem;
+  margin-bottom: 10px;
+}
+.headline-wrapper .highlights p {
+  font-size: 1.1rem;
+  line-height: 1.6;
 }
 .headline-wrapper article {
   grid-column: 1/2;
