--- a/wp-content/themes/theme-the-boyzs/style.css
+++ b/wp-content/themes/theme-the-boyzs/style.css
@@ -1333,16 +1333,17 @@ section {
 }
 .headline-wrapper .highlights {
   background-color: #f9acb8;
+  width: 55vw;
   padding: 15px;
   border-radius: 8px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 }
 .headline-wrapper .highlights h3 {
-  font-size: 1.6rem;
+  font-size: 2.6rem;
   margin-bottom: 10px;
 }
 .headline-wrapper .highlights p {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   line-height: 1.6;
 }
 .headline-wrapper article {
