--- a/wp-content/themes/theme-the-boyzs/partials/_news.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_news.scss
@@ -4,12 +4,14 @@
     margin: 0;
     width: 100%;
     display: flex;
+    margin-top: 100px;
     flex-direction: column;
     background-color: variables.$whitetrans; // Light background for better contrast
 
     ul.news-wrapper__list {
         display: flex;
         flex-direction: column;
+        
     
 
         li {
