continuation page equipe

--- a/wp-content/themes/theme-the-boyzs/partials/_equipe.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_equipe.scss
@@ -5,6 +5,19 @@
     margin-top:130px;
     margin-bottom:20px;
 }
+
+
+
+
+.equipe__modal{
+    width:100vw;
+    height:100vh;
+    max-width: 100%;
+    z-index: 14;
+    position: absolute;
+    background-color: black;
+
+}
 .equipe-container{
     display: grid;
     width:100vw;
