--- a/wp-content/themes/theme-the-boyzs/partials/_swiper.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_swiper.scss
@@ -2,6 +2,7 @@
 @use "sass:color";
 
 .swiper{
+    margin-top: 130px;
     width:100%;
     height:60vh;
     z-index: 0;
@@ -106,6 +107,7 @@
 
 @media(min-width:1000px){
     .swiper{
+        margin-top: 210px;
         .swiper-wrapper{
             .swiper-slide{
                 .text{
