--- a/wp-content/themes/theme-the-boyzs/partials/_pagination.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_pagination.scss
@@ -1,7 +1,10 @@
+@use "variables";
+
 .container {
-    background: $ldlRed;
+    background: variables.$ldlRed;
     padding: 25px;
     border-radius: 3px;
+    display: grid;
     box-shadow: -3px -3px 7px #f8525273, 3px 3px 5px rgba(138, 81, 81, 0.781);
 
     &__pagination {
