--- a/wp-content/themes/theme-the-boyzs/partials/_luttes.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_luttes.scss
@@ -1,13 +1,7 @@
 @use "variables";
 
 
-body {
-  background-color: #e6e2dc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
+
 
 .page-wrapper {
   text-align: center;
@@ -19,14 +13,16 @@ body {
   }
 
   .committees {
-    display: flex;
+    display: grid;
     justify-content: center;
     gap: 20px;
     margin-bottom: 20px;
 
     .committee-card {
       background: #fff;
-      border: 1px solid #d0d0d0;
+      margin: 20px; /* Add margin around committee cards */
+      padding: 15px; /* Add padding inside the cards */
+      border: 1px solid #ddd; /* Optional: border for distinction */
       padding: 20px;
       width: 150px;
       height: 150px;
@@ -38,9 +34,14 @@ body {
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
       .icon {
-        font-size: 36px;
         margin-bottom: 10px;
+        color: #333;
+        .icon i{
+          font-size: 100px; /* You can adjust this size as needed */
+        }
       }
+
+      
 
       .title {
         font-size: 14px;
@@ -98,12 +99,14 @@ body {
   }
 }
 
-@media(max-width:768px){
-  .lutte-wrapper__right-section {
-      display:none;
-    }
-  .lutte-wrapper__left-section {
-    width: 100%;
+
+/* Add responsiveness */
+@media (max-width: 768px) {
+  .cta-button {
+      width: 100%; /* Full-width buttons on small screens */
+  }
+
+  .committee-card {
+      width: calc(100% - 40px); /* Responsive card width */
   }
 }
-
