--- a/wp-content/themes/theme-the-boyzs/partials/_luttes.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_luttes.scss
@@ -4,8 +4,8 @@
 
 
 .page-wrapper {
-  text-align: center;
-  color: #000;
+margin-top :100px;
+  color: #f80b0b;
 
   h2 {
     margin-bottom: 20px;
@@ -14,6 +14,7 @@
 
   .committees {
     display: grid;
+    flex-direction: row;
     justify-content: center;
     gap: 20px;
     margin-bottom: 20px;
@@ -26,8 +27,7 @@
       padding: 20px;
       width: 150px;
       height: 150px;
-      display: flex;
-      flex-direction: column;
+      display: grid;
       align-items: center;
       justify-content: center;
       border-radius: 5px;
