finalisation page équipe

--- a/wp-content/themes/theme-the-boyzs/partials/_variables.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_variables.scss
@@ -2,6 +2,7 @@ $ldlRed: #b20838;
 $ldlRedLighter: #ffc7d7;
 $white: #fdfdff;
 $dark: #092327;
+$lightdark: #373f40;
 $tan: #e4dcca;
 $pink: #f7b9cc;
 $black:#000000;
