--- a/wp-content/themes/theme-the-boyzs/partials/_equipe.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_equipe.scss
@@ -6,16 +6,51 @@
     margin-bottom:20px;
 }
 
+#modal-close{
+    width:90%;
+    display: flex;
+    color:variables.$white;
+    margin-top:40px;
+    justify-content: end;
+
+}
+#modal-close:hover{
+    cursor: pointer;
+}
 
 
 
 .equipe__modal{
+    display: none;
+    position: fixed;
     width:100vw;
     height:100vh;
     max-width: 100%;
     z-index: 14;
-    position: absolute;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.838);
+    .equipe__modal-container{
+        display:flex;
+        justify-content: center;
+       
+        .modal-texte{
+            p{
+                margin: 20px;
+            }
+            align-self: center;
+            text-align: center;
+            width:70vw;
+            background-color: variables.$lightdark;
+            height:100vh;
+            
+            color: variables.$white;
+            font-family: "Manrope", sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+    }
 
 }
 .equipe-container{
@@ -26,7 +61,15 @@
     justify-content: center;
     
 
+    .equipe__carte:hover{
+        background-color: variables.$lightdark;
+        cursor: pointer;
+
+    }
     .equipe__carte {
+        
+        transition: ease-in-out 0.3s;
+
         background-color: variables.$dark;
         width:55vw;
         display:flex;
