--- a/wp-content/themes/theme-the-boyzs/partials/_luttes.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_luttes.scss
@@ -1,108 +1,129 @@
 @use "variables";
 
-
-
-
-.page-wrapper {
-  color: #f80b0b;
-
-  h2 {
-    margin-bottom: 20px;
-    font-size: 18px;
+.lutte-wrapper {
+  display: flex;
+  flex-direction: row;
+  &__left-section {
+    width: 50vw;
   }
-
-  .committees {
-    display: grid;
-    flex-direction: row;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
-
-    .committee-card {
-      background: #fff;
-      margin: 20px; /* Add margin around committee cards */
-      padding: 15px; /* Add padding inside the cards */
-      border: 1px solid #ddd; /* Optional: border for distinction */
-      padding: 20px;
-      width: 150px;
-      height: 150px;
-      display: grid;
-      align-items: center;
-      justify-content: center;
-      border-radius: 5px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-      .icon {
-        margin-bottom: 10px;
+  &__right-section {
+    width: 50%;
+    height: 100%;
+    align-self: flex-end;
+    img {
+      max-height: 500px;
+    }
+  }
+  &__fight-list {
+    width: 100%;
+    list-style-type: none;
+    padding: 0;
+    margin: 20px 0;
+    li {
+      margin-bottom: 10px;
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: variables.$tan;
+        padding: 10px;
+        text-decoration: none;
         color: #333;
-        .icon i{
-          font-size: 100px; /* You can adjust this size as needed */
+        font-weight: bold;
+        border-left: 5px solid #e74c3c;
+        transition: 0.3s ease-in-out;
+        .arrow {
+          color: white;
+          font-size: large;
+          font-weight: bolder;
+          background-color: variables.$ldlRed;
+          padding: 10px;
+          border-radius: 15%;
+          transition: 0.3s ease-in-out;
+          &:hover{
+            background-color: rgb(68, 2, 2);
+          }
+        }
+        &:hover {
+          background-color: #e6e4e4;
         }
       }
-      .title {
-        font-size: 14px;
-        font-weight: 600;
-        text-align: center;
-      }
     }
   }
-
-  .view-more {
-    background-color: #a30032;
-    color: #fff;
-    padding: 10px 20px;
-    font-size: 16px;
+  &__see-more {
+    width: 100%;
+    color: white;
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-bottom: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-    &:hover {
-      background-color: #850026;
-    }
+    font-size: 16px;
   }
+}
 
-  .pagination {
+@media(max-width:768px){
+  .lutte-wrapper__right-section {
+      display:none;
+  }
+  .lutte-wrapper__left-section {
+    width: 100%;
+  }
+}
+
+.titrelutte h1{
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 30px;
+  margin-top: 250px;
+}
+
+.descriptionlutte{
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 100px;
+}
+
+.committees {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  .committee-card {
+    width: 100%;
+    max-width: 250px;
+    padding: 20px;
+    background: white;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    gap: 10px;
-
-    .pagination-btn {
-      background-color: #a30032;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      font-size: 18px;
-      width: 30px;
-      height: 30px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-      &:hover {
-        background-color: #850026;
-      }
+    transition: all 0.3s;
+    .icon {
+      padding: 20px;
+      margin: 0;
+      margin-bottom: auto;
     }
-
-    .pagination-dots {
-      font-size: 18px;
-      color: #a30032;
+    p {
+      margin-bottom: auto;
+    }
+    &:hover {
+      color: variables.$ldlRed;
+      transform: scale(1.05);
+      box-shadow: 0 0 15px 2px rgba($color: #000000, $alpha: 0.2);
     }
   }
 }
 
+.herolutte {
+  padding-bottom: 0 !important;
+}
 
-/* Add responsiveness */
-@media (max-width: 768px) {
-  .cta-button {
-      width: 100%; /* Full-width buttons on small screens */
-  }
-
-  .committee-card {
-      width: calc(100% - 40px); /* Responsive card width */
+.textelutte {
+  background: variables.$white;
+  width: 100%;
+  height: auto;
+  p {
+    max-width: 800px;
+    margin: 15px auto;
+    font-size: 20px;
   }
 }
