--- a/wp-content/themes/theme-the-boyzs/style.css
+++ b/wp-content/themes/theme-the-boyzs/style.css
@@ -887,97 +887,133 @@ p {
     text-align: start;
   }
 }
-.page-wrapper {
-  color: #f80b0b;
-}
-.page-wrapper h2 {
-  margin-bottom: 20px;
-  font-size: 18px;
-}
-.page-wrapper .committees {
-  display: grid;
+.lutte-wrapper {
+  display: flex;
   flex-direction: row;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 20px;
 }
-.page-wrapper .committees .committee-card {
-  background: #fff;
-  margin: 20px; /* Add margin around committee cards */
-  padding: 15px; /* Add padding inside the cards */
-  border: 1px solid #ddd; /* Optional: border for distinction */
-  padding: 20px;
-  width: 150px;
-  height: 150px;
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.lutte-wrapper__left-section {
+  width: 50vw;
 }
-.page-wrapper .committees .committee-card .icon {
+.lutte-wrapper__right-section {
+  width: 50%;
+  height: 100%;
+  align-self: flex-end;
+}
+.lutte-wrapper__right-section img {
+  max-height: 500px;
+}
+.lutte-wrapper__fight-list {
+  width: 100%;
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0;
+}
+.lutte-wrapper__fight-list li {
   margin-bottom: 10px;
+}
+.lutte-wrapper__fight-list li a {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #e4dcca;
+  padding: 10px;
+  text-decoration: none;
   color: #333;
+  font-weight: bold;
+  border-left: 5px solid #e74c3c;
+  transition: 0.3s ease-in-out;
 }
-.page-wrapper .committees .committee-card .icon .icon i {
-  font-size: 100px; /* You can adjust this size as needed */
+.lutte-wrapper__fight-list li a .arrow {
+  color: white;
+  font-size: large;
+  font-weight: bolder;
+  background-color: #b20838;
+  padding: 10px;
+  border-radius: 15%;
+  transition: 0.3s ease-in-out;
 }
-.page-wrapper .committees .committee-card .title {
-  font-size: 14px;
-  font-weight: 600;
-  text-align: center;
+.lutte-wrapper__fight-list li a .arrow:hover {
+  background-color: rgb(68, 2, 2);
 }
-.page-wrapper .view-more {
-  background-color: #a30032;
-  color: #fff;
-  padding: 10px 20px;
+.lutte-wrapper__fight-list li a:hover {
+  background-color: #e6e4e4;
+}
+.lutte-wrapper__see-more {
+  width: 100%;
+  color: white;
+  border: none;
   font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-bottom: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-.page-wrapper .view-more:hover {
-  background-color: #850026;
-}
-.page-wrapper .pagination {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-.page-wrapper .pagination .pagination-btn {
-  background-color: #a30032;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  font-size: 18px;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-.page-wrapper .pagination .pagination-btn:hover {
-  background-color: #850026;
-}
-.page-wrapper .pagination .pagination-dots {
-  font-size: 18px;
-  color: #a30032;
 }
 
-/* Add responsiveness */
 @media (max-width: 768px) {
-  .cta-button {
-    width: 100%; /* Full-width buttons on small screens */
+  .lutte-wrapper__right-section {
+    display: none;
   }
-  .committee-card {
-    width: calc(100% - 40px); /* Responsive card width */
+  .lutte-wrapper__left-section {
+    width: 100%;
   }
 }
+.titrelutte h1 {
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 30px;
+  margin-top: 250px;
+}
+
+.descriptionlutte {
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 100px;
+}
+
+.committees {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.committees .committee-card {
+  width: 100%;
+  max-width: 250px;
+  padding: 20px;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.3s;
+}
+.committees .committee-card .icon {
+  padding: 20px;
+  margin: 0;
+  margin-bottom: auto;
+}
+.committees .committee-card p {
+  margin-bottom: auto;
+}
+.committees .committee-card:hover {
+  color: #b20838;
+  transform: scale(1.05);
+  box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.2);
+}
+
+.herolutte {
+  padding-bottom: 0 !important;
+}
+
+.textelutte {
+  background: #fdfdff;
+  width: 100%;
+  height: auto;
+}
+.textelutte p {
+  max-width: 800px;
+  margin: 15px auto;
+  font-size: 20px;
+}
+
 .don {
   background-color: white;
 }
@@ -994,9 +1030,9 @@ p {
   }
 }
 .swiper {
-  margin-top: 130px;
+  padding-top: 130px;
   width: 100%;
-  height: 60vh;
+  height: 100vh;
   z-index: 0;
 }
 .swiper .swiper-button-prev {
@@ -1083,9 +1119,9 @@ p {
   z-index: -2;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 768px) {
   .swiper {
-    margin-top: 210px;
+    padding-top: 200px;
   }
   .swiper .swiper-wrapper .swiper-slide .text .text1, .swiper .swiper-wrapper .swiper-slide .text .text2, .swiper .swiper-wrapper .swiper-slide .text .text3, .swiper .swiper-wrapper .swiper-slide .text p, .swiper .swiper-wrapper .swiper-slide .text span {
     text-align: left;
