Template page part 2

--- a/wp-content/themes/theme-the-boyzs/partials/_news.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_news.scss
@@ -11,6 +11,7 @@
     margin-top: 100px;
     flex-direction: column;
     background-color: variables.$whitetrans;
+    margin-top: 200px;
    ; // Light background for better contrast
 
     ul.news-wrapper__list {
