--- a/wp-content/themes/theme-the-boyzs/partials/_nav.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_nav.scss
@@ -14,7 +14,7 @@
   
       .logo {
         justify-self: center;
-        height: 3rem;
+        height: 60px;
         font-size: 1.5rem;
         font-weight: bold;
       }
