--- a/wp-content/themes/theme-the-boyzs/partials/_contact.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_contact.scss
@@ -1,8 +1,8 @@
 @use "variables";
 
-.titrecontact{
+.titrecontact .h1{
     font-size: 50px ;
-    margin-top: 200px;
+    margin-top: 180px;
     text-align: center;
 }
 
