--- a/wp-content/themes/theme-the-boyzs/partials/_luttes.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_luttes.scss
@@ -67,11 +67,11 @@
   }
 }
 
-.titrelutte h1{
+.titrelutte .h1{
   text-align: center;
   font-size: 50px;
   margin-bottom: 30px;
-  margin-top: 250px;
+  margin-top: 180px;
 }
 
 .descriptionlutte{
@@ -126,4 +126,13 @@
     margin: 15px auto;
     font-size: 20px;
   }
+}
+
+@media(max-width:1000px){
+  .lutte-wrapper__right-section{
+    img{
+      height:380px;
+    }
+  }
+
 }
