--- a/wp-content/themes/theme-the-boyzs/partials/_swiper.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_swiper.scss
@@ -2,7 +2,9 @@
 @use "sass:color";
 
 .swiper{
+    /*
     padding-top: 130px;
+    */
     width:100%;
     height:100vh;
     z-index: 0;
@@ -19,23 +21,23 @@
         .swiper-slide{
             position: relative;
             width:100vw;
-            height:60vh;
+            height:100vh;
             display: flex;
             justify-content: center;
             .fondnoir{
                 position: absolute;
                 width:100vw;
-                height:60vh;
+                height:100vh;
                 background: color.adjust(variables.$black, $alpha: -0.5);
                 z-index: -1;
 
             }
             .text{
                 width:100vw;
-                height:60vh;
+                height:100vh;
                 position: absolute;
                 display:flex;
-                
+                padding-top:180px;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
@@ -107,10 +109,20 @@
 
 @media(min-width:768px){
     .swiper{
+        /*
         padding-top: 200px;
+        */
+        .swiper-button-prev{
+            padding-top:100px;
+    
+        }
+        .swiper-button-next{
+            padding-top:100px;
+        }
         .swiper-wrapper{
             .swiper-slide{
                 .text{
+                    padding-top:200px;
                     .text1, .text2, .text3, p, span{
                        text-align: left;
                     }
