--- a/wp-content/themes/theme-the-boyzs/style.css
+++ b/wp-content/themes/theme-the-boyzs/style.css
@@ -53,6 +53,10 @@ h1 {
   font-weight: bolder;
 }
 
+.h1 {
+  font-weight: bolder;
+}
+
 section hr {
   margin-left: 0;
   width: 40%;
@@ -135,7 +139,7 @@ section:not([name=carrousel], [name=swiper]) {
 }
 .navbar .navbar-top .logo {
   justify-self: center;
-  height: 3rem;
+  height: 60px;
   font-size: 1.5rem;
   font-weight: bold;
 }
@@ -953,11 +957,11 @@ p {
     width: 100%;
   }
 }
-.titrelutte h1 {
+.titrelutte .h1 {
   text-align: center;
   font-size: 50px;
   margin-bottom: 30px;
-  margin-top: 250px;
+  margin-top: 180px;
 }
 
 .descriptionlutte {
@@ -1014,6 +1018,11 @@ p {
   font-size: 20px;
 }
 
+@media (max-width: 1000px) {
+  .lutte-wrapper__right-section img {
+    height: 380px;
+  }
+}
 .don {
   background-color: white;
 }
@@ -1030,7 +1039,9 @@ p {
   }
 }
 .swiper {
+  /*
   padding-top: 130px;
+  */
   width: 100%;
   height: 100vh;
   z-index: 0;
@@ -1046,22 +1057,23 @@ p {
 .swiper .swiper-wrapper .swiper-slide {
   position: relative;
   width: 100vw;
-  height: 60vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
 .swiper .swiper-wrapper .swiper-slide .fondnoir {
   position: absolute;
   width: 100vw;
-  height: 60vh;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   z-index: -1;
 }
 .swiper .swiper-wrapper .swiper-slide .text {
   width: 100vw;
-  height: 60vh;
+  height: 100vh;
   position: absolute;
   display: flex;
+  padding-top: 180px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -1121,6 +1133,17 @@ p {
 
 @media (min-width: 768px) {
   .swiper {
+    /*
+    padding-top: 200px;
+    */
+  }
+  .swiper .swiper-button-prev {
+    padding-top: 100px;
+  }
+  .swiper .swiper-button-next {
+    padding-top: 100px;
+  }
+  .swiper .swiper-wrapper .swiper-slide .text {
     padding-top: 200px;
   }
   .swiper .swiper-wrapper .swiper-slide .text .text1, .swiper .swiper-wrapper .swiper-slide .text .text2, .swiper .swiper-wrapper .swiper-slide .text .text3, .swiper .swiper-wrapper .swiper-slide .text p, .swiper .swiper-wrapper .swiper-slide .text span {
@@ -1295,11 +1318,11 @@ p {
   box-sizing: border-box;
 }
 
-.titreapropos h1 {
+.titreapropos .h1 {
   text-align: center;
   font-size: 50px;
   margin-bottom: 30px;
-  margin-top: 200px;
+  margin-top: 180px;
 }
 
 .descriptionapropos {
@@ -1308,12 +1331,13 @@ p {
 }
 
 .titredescription {
-  text-align: center;
+  text-align: left;
   margin-top: 100px;
+  margin-bottom: 20px;
 }
 
-.descriptionhistoire {
-  text-align: center;
+.descriptionhistoire p {
+  text-align: left;
 }
 
 .partners-section {
@@ -1615,9 +1639,9 @@ p {
   }
 }
 
-.titrecontact {
+.titrecontact .h1 {
   font-size: 50px;
-  margin-top: 200px;
+  margin-top: 180px;
   text-align: center;
 }
 
