--- a/wp-content/themes/theme-the-boyzs/style.css
+++ b/wp-content/themes/theme-the-boyzs/style.css
@@ -8,6 +8,11 @@
   z-index: 8;
 }
 
+html {
+  scrollbar-width: large; /* Makes the scrollbar thinner */
+  scrollbar-color: #5a0505 #f37272; /* Thumb color and track color *
+}
+
 body {
   font-family: "Manrope", sans-serif;
   font-size: 16px;
@@ -16,16 +21,17 @@ body {
   box-sizing: content-box;
   max-width: 100%;
   width: 100vw;
-  background-color: #e4dcca;
+  background-color: variables.$tan;
+
 }
 
 button {
-  background-color: #b20838;
+  background-color: variables.$ldlRed;
   font-size: 20px;
   text-transform: uppercase;
-  color: #fdfdff;
+  color: variables.$white;
   border: none;
-  border: solid 2px #fdfdff;
+  border: solid 2px variables.$white;
   padding: 15px;
   /*
   box-shadow: 3px 1px 10px 1px rgb(65, 64, 64);
@@ -34,11 +40,30 @@ button {
   transition-duration: 0.4s;
   text-decoration: none;
 }
-button:active:after {
+html:active:after {
   padding: 0;
   margin: 0;
   opacity: 1;
   transition: 0s;
+}
+
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f4f4f4; /* Background of the scrollbar track */
+  border-radius: 10px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the scrollbar thumb */
+  border-radius: 10px; /* Rounded corners */
+  border: 3px solid #f4f4f4; /* Creates padding between the thumb and the track */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Darker shade when hovered */
 }
 
 button:hover {
@@ -1481,13 +1506,13 @@ p {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .headline-wrapper .headline-title {
+  grid-column: 1/2;
   font-size: 4.5rem;
   font-weight: bold;
   line-height: 1.4;
   margin-bottom: 20px;
 }
 .headline-wrapper h1 {
-  grid-column: span 3;
   font-family: "Georgia", serif;
   font-size: 2.5em;
   font-weight: bold;
@@ -1512,7 +1537,7 @@ p {
   background-color: #f9acb8;
   width: 55vw;
   padding: 15px;
-  border-radius: 8px;
+  border-radius: 2px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
 }
 .headline-wrapper .highlights h3 {
@@ -1557,7 +1582,6 @@ p {
   cursor: pointer;
   position: relative;
   font-size: 20px;
-  border-radius: 12px;
   transition: color 0.3s, border-color 0.3s, background-color 0.3s, transform 0.3s, box-shadow 0.3s;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   outline: none;
