--- a/wp-content/themes/theme-the-boyzs/style.css
+++ b/wp-content/themes/theme-the-boyzs/style.css
@@ -381,7 +381,6 @@ section:not([name=carrousel], [name=swiper]) {
   bottom: 0;
   background-position: center;
   background-attachment: fixed;
-  background-image: url("/sources/medias/nouvelle1.png");
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: inset 0 0 30px rgb(0, 0, 0);
@@ -1189,6 +1188,7 @@ p {
   margin-top: 100px;
   flex-direction: column;
   background-color: rgba(253, 253, 255, 0.3725490196);
+  margin-top: 200px;
 }
 .news-wrapper ul.news-wrapper__list {
   display: flex;
@@ -1409,7 +1409,6 @@ p {
 #modal-close {
   width: 90%;
   display: flex;
-  color: #fdfdff;
   margin-top: 40px;
   justify-content: end;
 }
@@ -1683,6 +1682,21 @@ p {
 
 .webquebec {
   text-align: center;
+}
+
+.formulaire {
+  padding: 0 !important;
+  width: 100vw;
+  max-width: 100%;
+  background-color: #373f40;
+}
+.formulaire .titre {
+  color: #fdfdff;
+  text-align: center;
+}
+.formulaire .label-form {
+  color: #fdfdff;
+  margin-left: 10px;
 }
 
 .container {
