--- a/wp-content/themes/theme-the-boyzs/partials/_base.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_base.scss
@@ -10,8 +10,8 @@
 }
 
 html{
-  scrollbar-width: large; /* Makes the scrollbar thinner */
-  scrollbar-color: #5a0505 #f37272; /* Thumb color and track color *
+  scrollbar-width: thin; /* Makes the scrollbar thinner */
+  scrollbar-color: #5a0505 #f37272; 
 }
 
 body {
@@ -23,7 +23,6 @@ body {
   max-width: 100%;
   width: 100vw;
   background-color: variables.$tan;
-  
 }
 
 button {
